--- a/src/Components/header/header.module.scss
+++ b/src/Components/header/header.module.scss
@@ -60,3 +60,25 @@
 .headerHide{
     top: -7rem;
 }
+
+
+@media only screen and (max-width: 1366px){
+    .header{
+        width: 80vw;
+        
+        .row2{
+            flex: 1;
+            display: flex;
+            justify-content: flex-end;
+            .ul{
+                display: flex;
+            }
+            .li{
+                list-style-type: none;
+                margin: 0 1rem;
+            }
+            
+        }
+    }
+    
+}
