--- a/src/SCSS/global.style.scss
+++ b/src/SCSS/global.style.scss
@@ -43,9 +43,17 @@
     text-decoration: none;
 }
 
+.text-link-none{
+    text-decoration: none;
+    color: black;
+}
+
 //COMMON CLASSES
 .justify-wrapper{
     text-align: justify;
+}
+.container-span{
+    display: block
 }
 
 .ulAuthor{
